# 8505-ass2

./: .gitignore  CMakeLists.txt  LICENSE  Manifest  README.md
gui/8505-asn2/: 8505-asn2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/build-8505-asn2-Desktop-Debug/: 8505-asn2  moc_mainwindow.cpp  ui_mainwindow.h
guibin/: 8505-asn2-gui
src/: image.c  main.c  shared.h  utils.c
